force-app/main/default/objects/Lead/fields/AccountSegmentHE__c.field-meta.xml
<CustomField>
    <fullName>AccountSegmentHE__c</fullName>
    <formula>Account__r.isHigherEducation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Segment HE</label>
    <type>Checkbox</type>
</CustomField>