force-app/main/default/objects/Lead/fields/AccountSegmentPE__c.field-meta.xml
<CustomField>
    <fullName>AccountSegmentPE__c</fullName>
    <formula>Account__r.isPrimaryEducation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Segment PE</label>
    <type>Checkbox</type>
</CustomField>