force-app/main/default/objects/Lead/fields/AccountSegmentSE__c.field-meta.xml
<CustomField>
    <fullName>AccountSegmentSE__c</fullName>
    <formula>Account__r.isSecondaryEducation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Segment SE</label>
    <type>Checkbox</type>
</CustomField>