force-app/main/default/objects/Lead/fields/AccountSegmentVE__c.field-meta.xml
<CustomField>
    <fullName>AccountSegmentVE__c</fullName>
    <formula>Account__r.isVocationalEducation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Segment VE</label>
    <type>Checkbox</type>
</CustomField>