force-app/main/default/objects/Lead/fields/AutoConvert__c.field-meta.xml
<CustomField>
    <fullName>AutoConvert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Convert</label>
    <type>Checkbox</type>
</CustomField>