force-app/main/default/objects/Lead/fields/AutoConvertAccountMatchStatus__c.field-meta.xml
<CustomField>
    <fullName>AutoConvertAccountMatchStatus__c</fullName>
    <label>Auto convert account match status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ConvertStatus</valueSetName>
    </valueSet>
</CustomField>