force-app/main/default/objects/Lead/fields/AutoConvertCampaignMatchStatus__c.field-meta.xml
<CustomField>
    <fullName>AutoConvertCampaignMatchStatus__c</fullName>
    <label>Auto convert campaign match status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ConvertStatus</valueSetName>
    </valueSet>
</CustomField>