force-app/main/default/objects/Lead/fields/AutoConvertContactMatchStatus__c.field-meta.xml
<CustomField>
    <fullName>AutoConvertContactMatchStatus__c</fullName>
    <label>Auto convert contact match status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ConvertStatus</valueSetName>
    </valueSet>
</CustomField>