force-app/main/default/objects/Lead/fields/AutoConvertCreateAccount__c.field-meta.xml
<CustomField>
    <fullName>AutoConvertCreateAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto convert create Account</label>
    <type>Checkbox</type>
</CustomField>