force-app/main/default/objects/Lead/fields/AutoConvertCreateContact__c.field-meta.xml
<CustomField>
    <fullName>AutoConvertCreateContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto convert create Contact</label>
    <type>Checkbox</type>
</CustomField>