force-app/main/default/objects/Lead/fields/AutoConvertCreateOpportunity__c.field-meta.xml
<CustomField>
    <fullName>AutoConvertCreateOpportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Convert Create Opportunity</label>
    <type>Checkbox</type>
</CustomField>