force-app/main/default/objects/Lead/fields/AutoConvertError__c.field-meta.xml
<CustomField>
    <fullName>AutoConvertError__c</fullName>
    <label>Auto Convert Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>