force-app/main/default/objects/Lead/fields/AutoConvertOpportunityMatchStatus__c.field-meta.xml
<CustomField>
    <fullName>AutoConvertOpportunityMatchStatus__c</fullName>
    <label>Auto convert opportunity match status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ConvertStatus</valueSetName>
    </valueSet>
</CustomField>