force-app/main/default/objects/Lead/fields/CampaignName__c.field-meta.xml
<CustomField>
    <fullName>CampaignName__c</fullName>
    <description>Custom field to contain the initial Lead Campaign Name</description>
    <label>Campaign name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>