force-app/main/default/objects/Lead/fields/Concent__c.field-meta.xml
<CustomField>
    <fullName>Concent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent</label>
    <type>Checkbox</type>
</CustomField>