force-app/main/default/objects/Lead/fields/ConsentType__c.field-meta.xml
<CustomField>
    <fullName>ConsentType__c</fullName>
    <label>Consent Type</label>
    <type>TextArea</type>
</CustomField>