force-app/main/default/objects/Lead/fields/Default_AutoConvert_CustomerRelationship__c.field-meta.xml
<CustomField>
    <fullName>Default_AutoConvert_CustomerRelationship__c</fullName>
    <description>This is the default value that will be set on the Customer Relationship field the Opportunity when the Opportunity is created during the auto convert process.</description>
    <formula>IF(ISPICKVAL(OperatingCompany__c , &apos;Noordhoff Professional&apos;), &apos;New Business&apos;, &apos;&apos;)</formula>
    <label>Default AutoConvert CustomerRelationship</label>
    <type>Text</type>
</CustomField>