force-app/main/default/objects/Lead/fields/ISBNEAN__c.field-meta.xml
<CustomField>
    <fullName>ISBNEAN__c</fullName>
    <label>ISBN/EAN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>