force-app/main/default/objects/Lead/fields/LeadRank__c.field-meta.xml
<CustomField>
    <fullName>LeadRank__c</fullName>
    <inlineHelpText>This is the lead&apos;s ranking compared to other leads, based on its score. Each lead is ranked within its own company&apos;s list.</inlineHelpText>
    <label>LeadRank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>