force-app/main/default/objects/Lead/fields/LeadScore__c.field-meta.xml
<CustomField>
    <fullName>LeadScore__c</fullName>
    <inlineHelpText>This score reflects the potential value of the record as determined by specific criteria set in Salesforce Marketing Cloud.</inlineHelpText>
    <label>LeadScore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>