force-app/main/default/objects/Lead/fields/MatchType__c.field-meta.xml
<CustomField>
    <fullName>MatchType__c</fullName>
    <label>Match type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Match_type</valueSetName>
    </valueSet>
</CustomField>