force-app/main/default/objects/Lead/fields/MultipleCampaigns__c.field-meta.xml
<CustomField>
    <fullName>MultipleCampaigns__c</fullName>
    <description>This field will be used for assign multiple campaigns to the lead. Fill the iD&apos;s (18 characters) with semicolon (;) between the id&apos;s</description>
    <label>Multiple campaigns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>