force-app/main/default/objects/Lead/fields/OldAccountId__c.field-meta.xml
<CustomField>
    <fullName>OldAccountId__c</fullName>
    <label>OldAccountId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>