force-app/main/default/objects/Lead/fields/OrderingDate__c.field-meta.xml
<CustomField>
    <fullName>OrderingDate__c</fullName>
    <label>Ordering Date</label>
    <type>Date</type>
</CustomField>