force-app/main/default/objects/Lead/fields/OrderlineStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderlineStatus__c</fullName>
    <label>Orderline Status</label>
    <length>2</length>
    <type>Text</type>
</CustomField>