force-app/main/default/objects/Lead/fields/OrderMark__c.field-meta.xml
<CustomField>
    <fullName>OrderMark__c</fullName>
    <label>Order Mark</label>
    <length>30</length>
    <type>Text</type>
</CustomField>