force-app/main/default/objects/Lead/fields/OrderReference__c.field-meta.xml
<CustomField>
    <fullName>OrderReference__c</fullName>
    <description>Consists of Klopotek order number and line number of the order position separated by &apos;-&apos;</description>
    <label>Order Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>