force-app/main/default/objects/Lead/fields/OrganizationCode__c.field-meta.xml
<CustomField>
    <fullName>OrganizationCode__c</fullName>
    <description>Used to do matching on Leads with Accounts if no AccountId is supplied.</description>
    <label>OrganizationCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>