force-app/main/default/objects/Lead/fields/PreOppType__c.field-meta.xml
<CustomField>
    <fullName>PreOppType__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>