force-app/main/default/objects/Lead/fields/PrivateAddress__c.field-meta.xml
<CustomField>
    <fullName>PrivateAddress__c</fullName>
    <label>Private Address</label>
    <type>Address</type>
</CustomField>