force-app/main/default/objects/Lead/fields/ProcessingDate__c.field-meta.xml
<CustomField>
    <fullName>ProcessingDate__c</fullName>
    <label>Processing Date</label>
    <type>Date</type>
</CustomField>