force-app/main/default/objects/Lead/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Matching Field: match to opportunities for Liber</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Leads (Product)</relationshipLabel>
    <relationshipName>Lead</relationshipName>
    <type>Lookup</type>
</CustomField>