force-app/main/default/objects/Lead/fields/ReadytoConvert__c.field-meta.xml
<CustomField>
    <fullName>ReadytoConvert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready to Convert</label>
    <type>Checkbox</type>
</CustomField>