force-app/main/default/objects/Lead/fields/ReasonClosed__c.field-meta.xml
<CustomField>
    <fullName>ReasonClosed__c</fullName>
    <description>Reasons for closing a lead</description>
    <inlineHelpText>If the status is set to Closed, please indicate a reason</inlineHelpText>
    <label>Reason closed</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1-Already chosen other method</fullName>
            </value>
            <value>
                <fullName>2-Lead for next sales season</fullName>
            </value>
            <value>
                <fullName>3-Too late available</fullName>
            </value>
            <value>
                <fullName>4-Content</fullName>
            </value>
            <value>
                <fullName>5-Info sent for follow-up</fullName>
            </value>
            <value>
                <fullName>6-Corona</fullName>
            </value>
            <value>
                <fullName>7-Duplicate/test/wrong data</fullName>
            </value>
            <value>
                <fullName>8-Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>