force-app/main/default/objects/Lead/fields/Sales_season__c.field-meta.xml
<CustomField>
    <fullName>Sales_season__c</fullName>
    <label>Sales season</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_season</valueSetName>
    </valueSet>
</CustomField>