force-app/main/default/objects/Lead/fields/SalesSeason__c.field-meta.xml
<CustomField>
    <fullName>SalesSeason__c</fullName>
    <description>Calculate Sales Season</description>
    <formula>IF(MONTH(DATEVALUE(CreatedDate))&lt;=MONTH(SalesSeasonEndDate__c),TEXT(YEAR(DATEVALUE(CreatedDate))-1)&amp;&quot;-&quot;&amp;TEXT(YEAR(DATEVALUE(CreatedDate))),TEXT(YEAR(DATEVALUE(CreatedDate)))&amp;&quot;-&quot;&amp;TEXT(YEAR(DATEVALUE(CreatedDate))+1))</formula>
    <label>Sales Season</label>
    <type>Text</type>
</CustomField>