force-app/main/default/objects/Lead/fields/SalesSeasonEndDate__c.field-meta.xml
<CustomField>
    <fullName>SalesSeasonEndDate__c</fullName>
    <description>Get opco specific Sales Season End Date</description>
    <formula>CASE(TEXT(OperatingCompany__c),&apos;Liber&apos;,$CustomMetadata.Operating_Company__mdt.Liber.defaultCloseDate__c,
					&apos;Noordhoff&apos;,$CustomMetadata.Operating_Company__mdt.Noordhoff.defaultCloseDate__c,
					&apos;Noordhoff Zorg&apos;,$CustomMetadata.Operating_Company__mdt.NoordhoffZorg.defaultCloseDate__c,
					&apos;Plantyn&apos;,$CustomMetadata.Operating_Company__mdt.Plantyn.defaultCloseDate__c,
					NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Season End Date</label>
    <type>Date</type>
</CustomField>