force-app/main/default/objects/Lead/fields/SyncToMC__c.field-meta.xml
<CustomField>
    <fullName>SyncToMC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SyncToMC</label>
    <type>Checkbox</type>
</CustomField>