force-app/main/default/objects/Lead/fields/Year6__c.field-meta.xml
<CustomField>
    <fullName>Year6__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Year 6</label>
    <type>Checkbox</type>
</CustomField>