force-app/main/default/objects/Lead/validationRules/CloseReasonMandatoryOnDiscarted.validationRule-meta.xml
<ValidationRule>
    <fullName>CloseReasonMandatoryOnDiscarted</fullName>
    <active>true</active>
    <description>close reason is mandatory when users set the Lead to discarded</description>
    <errorConditionFormula>ISPICKVAL(Status, &apos;Discarded&apos;) &amp;&amp; ISPICKVAL(ReasonClosed__c, &apos;&apos;) &amp;&amp; NOT(ISPICKVAL(LeadSource , &apos;eCommerce&apos;))</errorConditionFormula>
    <errorDisplayField>ReasonClosed__c</errorDisplayField>
    <errorMessage>Reason Closed if mandatory when the Lead is set to Discarded</errorMessage>
</ValidationRule>