force-app/main/default/objects/Lead/validationRules/NH_Prof_Email_Phone_or_Mobile_Filled.validationRule-meta.xml
<ValidationRule>
    <fullName>NH_Prof_Email_Phone_or_Mobile_Filled</fullName>
    <active>true</active>
    <description>When a Lead with Operating Company &apos;Noordhoff Zorg&apos; is created, either Email, Phone or Mobile should be filled (at least 1 of 3)</description>
    <errorConditionFormula>IF(ISPICKVAL(OperatingCompany__c, &quot;Noordhoff Zorg&quot;),
		AND(ISBLANK(Email), 
 ISBLANK(MobilePhone),  
	ISBLANK(Phone)), false)</errorConditionFormula>
    <errorMessage>Either email, mobile or phone should be filled</errorMessage>
</ValidationRule>