force-app/main/default/objects/Lead/validationRules/NH_Prof_Lead_Source_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>NH_Prof_Lead_Source_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL(OperatingCompany__c, &quot;Noordhoff Professional&quot;),
ISPICKVAL(LeadSource, &quot;&quot;), false)</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>Lead Source cannot be blank</errorMessage>
</ValidationRule>