force-app/main/default/objects/Lead/listViews/All_Leads_heldigitalt_ak_4_9.listView-meta.xml
<ListView>
    <fullName>All_Leads_heldigitalt_ak_4_9</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.FIRST_NAME</columns>
    <columns>LEAD.LAST_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Campaign__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OperatingCompany__c</field>
        <operation>equals</operation>
        <value>Liber</value>
    </filters>
    <filters>
        <field>Campaign__c</field>
        <operation>equals</operation>
        <value>[LS] Åk 7-9 - Utvärderingspaket - Testa heldigitalt,[UP] Åk 4-6 - Utvärderingspaket - Testa heldigitalt</value>
    </filters>
    <label>All Leads - heldigitalt åk 4-9</label>
    <sharedTo>
        <group>AllUsersLiber</group>
    </sharedTo>
</ListView>