force-app/main/default/objects/Lead/listViews/All_Noordhoff_Zorg_AutoConvert_Failed.listView-meta.xml
<ListView>
    <fullName>All_Noordhoff_Zorg_AutoConvert_Failed</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Message__c</columns>
    <columns>Campaign__c</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OperatingCompany__c</field>
        <operation>equals</operation>
        <value>Noordhoff Professional</value>
    </filters>
    <filters>
        <field>AutoConvert__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Converted,Discarded</value>
    </filters>
    <filters>
        <field>LEAD.EMAIL</field>
        <operation>notContain</operation>
        <value>noordhoff.nl,infinitaslearning.com</value>
    </filters>
    <label>All Noordhoff Zorg AutoConvert Failed</label>
    <sharedTo>
        <role>Noordhoff_Professional_Manager</role>
    </sharedTo>
</ListView>