force-app/main/default/objects/Lead/listViews/Alle_Proeflicentie_Leads_BAO.listView-meta.xml
<ListView>
    <fullName>Alle_Proeflicentie_Leads_BAO</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Account__c</columns>
    <columns>Product__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Converted,Discarded</value>
    </filters>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>eCommerce</value>
    </filters>
    <filters>
        <field>Product__c</field>
        <operation>contains</operation>
        <value>Proeflicentie</value>
    </filters>
    <label>Alle Proeflicentie Leads BAO</label>
    <sharedTo>
        <group>AllUsersNoordhoff</group>
    </sharedTo>
</ListView>