force-app/main/default/objects/Lead/listViews/AllWebToLeads.listView-meta.xml
<ListView>
    <fullName>AllWebToLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Website</value>
    </filters>
    <label>All Web to Leads</label>
    <sharedTo>
        <group>AllUsersLiber</group>
        <group>AllUsersNoordhoff</group>
        <group>AllUsersPlantyn</group>
    </sharedTo>
</ListView>