force-app/main/default/objects/Lead/listViews/DefaultLeadQueue_Lead.listView-meta.xml
<ListView>
    <fullName>DefaultLeadQueue_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Default Lead queue</label>
    <queue>DefaultLeadQueue</queue>
    <sharedTo>
        <group>AllUsersLiber</group>
        <group>AllUsersNoordhoff</group>
        <group>AllUsersPlantyn</group>
    </sharedTo>
</ListView>