force-app/main/default/objects/Lead/listViews/IC_Leads_H_gskola.listView-meta.xml
<ListView>
    <fullName>IC_Leads_H_gskola</fullName>
    <columns>FULL_NAME</columns>
    <columns>Account__c</columns>
    <columns>Message__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>ICOrderForm</value>
    </filters>
    <filters>
        <field>Campaign__c</field>
        <operation>startsWith</operation>
        <value>IC</value>
    </filters>
    <label>IC Leads - Högskola</label>
    <sharedTo>
        <group>AllUsersLiber</group>
    </sharedTo>
</ListView>