force-app/main/default/objects/Lead/listViews/InformatQueue_Lead.listView-meta.xml
<ListView>
    <fullName>InformatQueue_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Informat Lead Queue</label>
    <queue>InformatLeadQueue</queue>
    <sharedTo>
        <group>AllUsersPlantyn</group>
    </sharedTo>
</ListView>