force-app/main/default/objects/Lead/listViews/Insamling_kommunleads.listView-meta.xml
<ListView>
    <fullName>Insamling_kommunleads</fullName>
    <columns>Account__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.FIRST_NAME</columns>
    <columns>LEAD.LAST_NAME</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Campaign__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OperatingCompany__c</field>
        <operation>equals</operation>
        <value>Liber</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New,In process,MQL,Converted</value>
    </filters>
    <filters>
        <field>LEAD.COMPANY</field>
        <operation>equals</operation>
        <value>Liber - Municipality</value>
    </filters>
    <label>Enkät - Digitalisering i svensk skola</label>
    <sharedTo>
        <group>AllUsersLiber</group>
    </sharedTo>
</ListView>